add professional & technical skills sections and clean up HTML

--- a/index.html
+++ b/index.html
@@ -15,33 +15,21 @@
 
   <div id="section-topbar">
     <div id="topbar-inner">
-      <div class="container">
-        <div class="row">
-          <div class="dropdown">
-            <ul id="nav" class="nav">
-              <li class="menu-item"><a id="about-button" title="About"><i class="icon-user"></i></a></li>
-              <li class="menu-item"><a href="#" id="resume-button" title="Resume"><i class="icon-file"></i></a></li>
-              <li class="menu-item"><a href="#" id="contact-button" title="Contact"><i class="icon-envelope"></i></a></li>
-            </ul><!--/ uL#nav -->
-          </div><!-- /.dropdown -->
-
-          <div class="clear"></div>
-        </div><!--/.row -->
-      </div><!--/.container -->
-
-      <div class="clear"></div>
+      <ul id="nav" class="nav">
+        <li class="menu-item"><a id="about-button" title="About"><i class="icon-user"></i></a></li>
+        <li class="menu-item"><a id="resume-button" title="Resume"><i class="icon-file"></i></a></li>
+        <li class="menu-item"><a id="contact-button" title="Contact"><i class="icon-envelope"></i></a></li>
+      </ul><!--/ uL#nav -->
     </div><!--/ #topbar-inner -->
   </div><!--/ #section-topbar -->
   
   <div id="headerwrap">
-    <div class="container">
-      <div class="row centered">
-        <div class="col-lg-12">
-          <h1>Aaron Wright</h1>
-          <h3><span id="image-text">Lawyer</span></h3>
-        </div><!--/.col-lg-12 -->
-      </div><!--/.row -->
-    </div><!--/.container -->
+    <div class="row centered">
+      <div class="col-lg-12">
+        <h1>Aaron Wright</h1>
+        <h3><span id="image-text">Lawyer</span></h3>
+      </div><!--/.col-lg-12 -->
+    </div><!--/.row -->
   </div><!--/.#headerwrap -->
 
   <section id="about" name="about"></section>
@@ -59,7 +47,7 @@
           After Wikia, Wright clerked for the Honorable William J. Martini of the U.S. District Court for the District of New Jersey and worked as an associate at several prominent New York law firms, including Patterson Belknap and Jenner & Block. He received his J.D. cum laude from the Benjamin N. Cardozo School of Law, where he served as the editor-in-chief of the Cardozo Law Review.</p>
         </div>
         <div class="col-lg-3">
-          <p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
+          <p><a href="#"><i class="icon-file"></i></a><sm>DOWNLOAD PDF</sm></p>
         </div>
         
       </div><!--/.row -->
@@ -265,6 +253,102 @@
     </div><!--/.row -->
     <br>
     <hr>
+  </div><!--/.container -->
+
+  <!--PROFESSIONAL ACTIVITIES DESCRIPTION -->
+  <div class="container desc">
+    <div class="row">
+
+      <div class="col-lg-2 col-lg-offset-1">
+          <h5>PROFESSIONAL ACTIVITIES</h5>
+        </div>
+        <div class="col-lg-6">
+          <p><t>Invited Participant</t><br/>
+            <strong>Challenges and Opportunities of Cryptoequity</strong><br/>
+          </p>
+          <p><more>MIT Media Lab, Massachusetts Institute of Technology, Cambridge, MA</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 2015</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Invited Participant and Workshop Leader</t><br/>
+            <strong>Cryptoequity and the Law</strong><br/>
+          </p>
+          <p><more>Berkman Center for Internet & Society at Harvard Law School, Cambridge, MA.</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 16-18 2015</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Presentation on Cryptolaw</t><br/>
+            <strong>Cryptoeconomicon Workshop</strong><br/>
+          </p>
+          <p><more>Mountain View, CA.</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 26-29 2015</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Panelist</t><br/>
+            <strong>Big Data, Changing Norms, Open Opportunities</strong><br/>
+          </p>
+          <p><more>Freedom to Connect Conference New York, NY.</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>MARCH 2 2015</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Invited Panelist and Participant</t><br/>
+            <strong>Blockchain Workshop</strong><br/>
+          </p>
+          <p><more>Stanford University Palo Alto, CA.</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>MARCH 22-24 2015</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Invited Panelist</t><br/>
+            <strong>New Breakthroughs in Computational Law</strong><br/>
+          </p>
+          <p><more>CodeX FutureLaw 2015 Conference at Stanford University Law School, Palo Alto, CA.</more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>APRIL 30 2015</sm></p>
+        </div>
+    </div><!--/.row -->
+    <br>
+    <hr>
+  </div><!--/.container -->
+
+  <!--TECHNICAL SKILLS DESCRIPTION -->
+  <div class="container desc">
+    <div class="row">
+
+        <div class="col-lg-2 col-lg-offset-1">
+          <h5>TECHNICAL SKILLS</h5>
+        </div>
+        <div class="col-lg-6">
+          <p><t>Experienced programmer</t><br/>
+            <strong>proficiency in scripting languages and database design</strong><br/>
+          </p>
+          <p><more>
+            <ul>
+              <li>Javacript</li>
+              <li>PHP</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SQL</li>
+            </ul>
+          </more></p>
+        </div>
+
+    </div><!--/.row -->
   </div><!--/.container -->
 
   <section id="contact" name="contact"></section>
