cleanup template and README

--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aaron Wright</title>
+  <title>Cardozo Student</title>
   <meta charset="UTF-8">
   <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -174,9 +174,9 @@
         <div class="col-lg-3">
           <p><sm>SOCIAL</sm></p>
           <p>
-            <a href="[TWITTER ACCOUNT]"><i class="icon-twitter"></i>[TWITTER ACCOUNT]</a>
+            <a href="[TWITTER ACCOUNT LINK]"><i class="icon-twitter"></i>[TWITTER ACCOUNT]</a>
             <br>
-            <a href="[LINKEDIN ACCOUNT]"><i class="icon-linkedin"></i>[LINKEDIN ACCOUNT]</a>
+            <a href="[LINKEDIN ACCOUNT LINK]"><i class="icon-linkedin"></i>[LINKEDIN ACCOUNT]</a>
           </p>
         </div>
       </div><!--/.row -->
